fixed bio look on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,8 @@ a {
 }
 
 p {
-  margin: 1rem 7rem;
+  margin: 1rem auto;
+  max-width: 70vw;
   font-size: var(--small);
 }
 
